Andreas Korrektur und Rahmen um Bilder

--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -1,36 +1,36 @@
 \subsection{Häusliche Gewalt}    \label{subsec_2.1.2}
 % Definition häusliche Gewalt
-Wie in Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression bereits erwähnt ist der Zweck von Gewalt die Macht und Kontrolle zu erhalten \parencite{Def_Aggressivität_vs_violence}. Wenn in einer Beziehung oder innerhalb der Familie eine Person versucht Macht oder Kontrolle über ein anderes Mitglied zu haben, zählt dies zur häuslichen Gewalt. Sowohl in bestehenden, wie auch in aufgelösten Beziehungen familiären, ehelichen oder eheähnlichen Ursprungs kann häusliche Gewalt auftreten \parencite{Def_haus_Gewalt, Def_haus_Gewalt_2}. Diese kommmt nicht nur in der häuslichen Umgebung, einem als sicher gedachten Ort vor, sondern kann auch im öffentlichen Raum stattfinden \parencite{Gewaltarten_WHO}. 
+Wie in Kapitel ~\ref{subsec_2.1.1} bereits erwähnt, ist der Zweck von Gewalt Macht und Kontrolle zu erhalten \parencite{Def_Aggressivität_vs_violence}. Wenn in einer Beziehung oder innerhalb der Familie eine Person versucht Macht oder Kontrolle über ein anderes Mitglied zu haben, zählt dies zur häuslichen Gewalt. Sowohl in bestehenden, wie auch in aufgelösten Beziehungen familiären, ehelichen oder eheähnlichen Ursprungs kann häusliche Gewalt auftreten \parencite{Def_haus_Gewalt, Def_haus_Gewalt_2}. Diese kommmt nicht nur in der häuslichen Umgebung, einem als sicher gedachten Ort vor, sondern kann auch im öffentlichen Raum stattfinden \parencite{Gewaltarten_WHO}. 
 
 Es lassen sich dabei zwei Muster identifizieren. Ein \textit{spontanes Konfliktverhalten}, oder auch \textit{situative Gewalt} gennant, kann einmalig, aber auch regelmäßig stattfinden und hat die Funktion einer negativen Stressbewältigung. Durch fehlende Ressourcen sehen die gewalttätigen Personen nur die Gewalt als einzige Lösung, um ein Konflikt zu lösen. Ein solches Gewaltmuster ist sowohl bei Männern, wie auch bei Frauen zu finden. Das Motiv von Macht und Kontrolle ist in diesen Fällen nicht ausschlaggebend. Dieses Verhaltensmuster kann sich jedoch in langanhaltendes \textit{systematisches Gewalt- und Kontrollverhalten} verwandeln. Hier haben Macht und Kontrolle eine große Rolle. In diesen Fällen existiert die Absicht den Gegenüber zu kontrollieren und ein langanhaltendes Gefühl von Macht zu verspühren. Dieses Verhalten ist vermehrt bei Männer vorzufinden, die sich in einer ungleichen Beziehung befinden. Um dieses Gefühl von Macht und Kontrolle zu verspüren greifen sie auf entwürdigendes und machtmissbrauchendes Verhalten zurück \parencite{Def_Form_Folge_Gewalt}.
 
-Gewalt lässt sich in drei Kategorien aufteilen, orientiert an der gewaltausübenden Person. Diese Unterteilungen lassen sich in weitere Subgruppierungen teilen. Die \textit{selbstgerichtete Gewalt} beinhaltet suizidales Verhalten, wie Gedanken an Suizid und Versuche dessen, sowie die erfolgreiche Vollendung solcher Versuche. Der zweite Bestandteil dieser Gewalt ist die Selbstmisshandlung \parencite{Gewaltarten_WHO}. Auch die \textit{zwischenmenschliche Gewalt} lässt sich in zwei Unterkategorien aufteilen. Die Gesellschaftsgewalt erfolgt zwischen Personen, die nicht miteinander verwandt sind und die sich möglicherweise nicht kennen und erfolgt demzufolge meist in der Öffentlichkeit. Ein weit bekanntes Beispiel für solche Gewalt ist die Vergewaltigung oder die sexuelle Nötigung durch Fremde. Sie umfasst aber auch zufällige Gewaltausübungen oder die Gewalt innerhalb Institutionen wie der Schule, Arbeit, Gefängnissen oder Alten- und Pflegeheimen. Die zweite Untergruppe, und die im Rahmen dieser Arbeit wichtigere, ist die Familien- und speziell die Partnerschaftsgewalt \parencite{Gewaltarten_WHO}. Diese Unterkategorie der interpersonellen Gewalt entspricht der bereits zuvor dargeboten häuslichen Gewalt. Die dabei involvierten Personenkonstellationen können Kinder-Eltern, Eltern-Kinder, Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}. Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft. Die dritte und letzte Kategorie ist die \textit{kollektive Gewalt}, welche sich in soziale, politische und wirtschaftliche Gewalt unterteilen lässt. Diese Unterkategorien zeigen im Gegensatz zu den vorherigen Kategorien mögliche Gründe für die Gewalt durch Staaten oder großen Gruppen an Einzelpersonen. Terroranschläge oder auch Hassangriffe sind Beispiele für eine sozial motivierte kollektive Gewalt. Für politische Gewalt ist Krieg ein sehr prominentes Beispiel. Gewalthandlungen größerer Gruppen mit dem Ziel eines wirtschaftlichen Gewinns sind Bestandteil der wirtschaftlichen Gewalt. Gewalthandlungen durch größere Gruppen können stehts mehrere Motive haben \parencite{Gewaltarten_WHO}.
+Gewalt lässt sich in drei Kategorien aufteilen, orientiert an der gewaltausübenden Person. Diese Unterteilungen lassen sich in weitere Subgruppierungen teilen. Die \textit{selbstgerichtete Gewalt} beinhaltet suizidales Verhalten, wie Gedanken an Suizid und Versuche dessen, sowie die erfolgreiche Vollendung solcher Versuche. Der zweite Bestandteil dieser Gewalt ist die Selbstmisshandlung \parencite{Gewaltarten_WHO}. Auch die \textit{zwischenmenschliche Gewalt} lässt sich in zwei Unterkategorien aufteilen. Die Gesellschaftsgewalt erfolgt zwischen Personen, die nicht miteinander verwandt sind und die sich möglicherweise nicht kennen und erfolgt demzufolge meist in der Öffentlichkeit. Ein weit bekanntes Beispiel für solche Gewalt ist die Vergewaltigung oder die sexuelle Nötigung durch Fremde. Sie umfasst aber auch zufällige Gewaltausübungen oder die Gewalt innerhalb Institutionen wie der Schule, Arbeit, Gefängnissen oder Alten- und Pflegeheimen. Die zweite Untergruppe, und die im Rahmen dieser Arbeit wichtigere, ist die Familien- und speziell die Partnerschaftsgewalt \parencite{Gewaltarten_WHO}. Diese Unterkategorie der interpersonellen Gewalt entspricht der bereits zuvor dargeboten häuslichen Gewalt. Die dabei involvierten Personenkonstellationen können unter anderem Kinder-Eltern, Eltern-Kinder, Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}. Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft. Die dritte und letzte Kategorie ist die \textit{kollektive Gewalt}, welche sich in soziale, politische und wirtschaftliche Gewalt unterteilen lässt. Diese Unterkategorien zeigen im Gegensatz zu den vorherigen Kategorien mögliche Gründe für die Gewalt durch Staaten oder großen Gruppen an Einzelpersonen. Terroranschläge oder auch Hassangriffe sind Beispiele für eine sozial motivierte kollektive Gewalt. Für politische Gewalt ist Krieg ein sehr prominentes Beispiel. Gewalthandlungen größerer Gruppen mit dem Ziel eines wirtschaftlichen Gewinns sind Bestandteil der wirtschaftlichen Gewalt. Gewalthandlungen durch größere Gruppen können stehts mehrere Motive haben \parencite{Gewaltarten_WHO}.
 
 
 % GEWALTARTEN
 \subsubsection{Gewaltarten}     \label{2.1.2.1}
-Wenn man das Wort Gewalt hört, denken die meisten erst an \textit{physische Gewalt}. Doch so wie die Aggression kann sich die Gewalt auf unterschiedliche Arten manifestiert. Eine einheitliche Unterteilung der verschiedenen Gewaltarten ist in der Forschung bislang nicht gegeben. Je nach Schwerpunkt wird auf bis zu fünf Gewaltformen unterschieden. Zu der zu Beginn genannten physischen Gewalt gibt es noch die \textit{psychische, sexualisiert, soziale und ökonomische Gewalt} \parencite{Def_Form_Folge_Gewalt}.
+Wenn man das Wort Gewalt hört, denken die meisten erst an \textit{physische Gewalt}. Doch so wie die Aggression kann sich die Gewalt auf unterschiedliche Arten manifestieren. Eine einheitliche Unterteilung der verschiedenen Gewaltarten ist in der Forschung bislang nicht gegeben. Je nach Schwerpunkt wird auf bis zu fünf Gewaltformen unterschieden. Zu der zu Beginn genannten physischen Gewalt gibt es noch die \textit{psychische, sexualisiert, soziale und ökonomische Gewalt} \parencite{Def_Form_Folge_Gewalt}.
 
 % physische Gewalt
-In Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression wurde bereits auf die physische Aggression eingegangen und darauf, dass die Abgrenzung von Gewalt und Aggression nicht einfach ist. Denn wie auch die physische Aggression, ist Bestandteil der körperlichen Gewalt jede Form von physischen Angriffen \parencite{ph_G_wie_aggro}. Darunter zählen beispielsweise Tritte, Bisse, Würgen oder Gewaltausübungen mithilfe von Gegenständen. Im Extremfall kann es zur Tötung kommen \parencite{Gewaltart, Def_haus_Gewalt, physische_Gewalt_wie_aggro, Def_Form_Folge_Gewalt}.
+In Kapitel ~\ref{subsec_2.1.1} wurde bereits auf die physische Aggression eingegangen und darauf, dass die Abgrenzung von Gewalt und Aggression nicht einfach ist. Denn wie auch die physische Aggression, ist Bestandteil der körperlichen Gewalt jede Form von physischen Angriffen \parencite{ph_G_wie_aggro}. Darunter zählen beispielsweise Tritte, Bisse, Würgen oder Gewaltausübungen mithilfe von Gegenständen. Im Extremfall kann es zur Tötung kommen \parencite{Gewaltart, Def_haus_Gewalt, physische_Gewalt_wie_aggro, Def_Form_Folge_Gewalt}.
 
 % psychische Gewalt
-Psychische Gewalt kann durch Worte oder auch durch Gesten und Gesichtsausdrücke erfolgen \parencite{Def_haus_Gewalt_2}. Einige Beispiele für psychische Gewalthandlungen sind Beleidigungen, wie Beschimpfungen und die damit einhergehende Demütigung der betroffenen Person. Oftmals beschädigt die gewalttätige Person Eigentum des Opfers oder behandelt dessen Haustiere nicht artgerecht. Es kann auch dazu kommen, dass die eigenen Kinder genutzt werden, um bei der betroffenen Person Druck auszuüben. Unter psychische Gewalt fallen auch  eifersüchtige Verhaltensweisen, die sich bei der Beendigung einer Beziehung in Stalking umwandeln können \parencite{Def_Form_Folge_Gewalt, Gewaltart, Def_haus_Gewalt_2}. Diese Taten werden verwendet, um den Gegenüber zu manipulieren oder um den eigenen Interssen und Absichten nachzugehen. Sie können auch Verwendung finden, um in böswilliger Absicht das Selbstbewusstsein des Partner zu senken, so das dieser widerstandslosen Gehorsam zeigt \parencite{Def_haus_Gewalt_2}. Diese Art von Gewalt ist nicht so wie die physische Gewalt zwangläufig am Körper sichtbar, ihre negativen Folgen können dennoch tiefer liegen und länger andauern \parencite{psych_Gewalt}. Oftmals ist die psychische Gewalt bloß ein Vorreiter für spätere sexuelle Misshandlungen \parencite{psych_Gewalt_2}. Des Weiteren werden Opfer einer solchen Gewalt von ihrem sozialen Umfeld nicht immer erkannt. Dies kann dazu führen, dass sie an ihrer persönlichen Wahrnehmung zweifeln. Die Reichweite und Intensität der Folgen ist von Person zu Person unterschiedlich und hängt von dessen Vorerfahrungen ab. Laut dem \textcite{Def_Form_Folge_Gewalt} zählt die Forschung die soziale und ökonomische Gewalt zu der psychischen dazu. Im Umfang dieser Arbeit werden diese drei Arten jedoch getrennt betrachtet. 
+Psychische Gewalt kann durch Worte oder auch durch Gesten und Gesichtsausdrücke erfolgen \parencite{Def_haus_Gewalt_2}. Einige Beispiele für psychische Gewalthandlungen sind Beleidigungen oder Beschimpfungen und die damit einhergehende Demütigung der betroffenen Person. Oftmals beschädigt die gewalttätige Person Eigentum des Opfers oder behandelt dessen Haustiere nicht artgerecht. Es kann auch dazu kommen, dass die eigenen Kinder genutzt werden, um bei der betroffenen Person Druck auszuüben. Unter psychische Gewalt fallen auch  eifersüchtige Verhaltensweisen, die sich bei der Beendigung einer Beziehung in Stalking umwandeln können \parencite{Def_Form_Folge_Gewalt, Gewaltart, Def_haus_Gewalt_2}. Diese Taten werden verwendet, um den Gegenüber zu manipulieren oder um den eigenen Interssen und Absichten nachzugehen. Sie können auch Verwendung finden, um in böswilliger Absicht das Selbstbewusstsein des Partner zu senken, sodass dieser widerstandslosen Gehorsam zeigt \parencite{Def_haus_Gewalt_2}. Diese Art von Gewalt ist nicht so wie die physische Gewalt zwangläufig am Körper sichtbar, ihre negativen Folgen können dennoch tiefer liegen und länger andauern \parencite{psych_Gewalt}. Oftmals ist die psychische Gewalt bloß ein Vorreiter für spätere sexuelle Misshandlungen \parencite{psych_Gewalt_2}. Des Weiteren werden Opfer einer solchen Gewalt von ihrem sozialen Umfeld nicht immer erkannt. Dies kann dazu führen, dass sie an ihrer persönlichen Wahrnehmung zweifeln. Die Reichweite und Intensität der Folgen ist von Person zu Person unterschiedlich und hängt von dessen Vorerfahrungen ab. Laut dem \textcite{Def_Form_Folge_Gewalt} zählt die Forschung die soziale und ökonomische Gewalt zu der psychischen dazu. Im Umfang dieser Arbeit werden diese drei Arten jedoch getrennt betrachtet. 
 
 % sexualisiert Gewalt
-Wie im zuvorigen Absatz bereits dargeboten, können psychische Gewalthandlungen, wie Drohungen oder oportune bloßstellende Kommentare, als Vorbote sexualisierter Gewalt genutzt werden \parencite{Übergang_psy_zu_sex_Gewalt}. Des Öfteren geben die Betroffenen auf, sich zu wehren und gehen den Anforderungen und Wünschen des Täters nach. Ein solches Verhalten wird von einigen als möglicher Konsens gedeutet \parencite{Def_haus_Gewalt_2}. Diese Art von Gewalt kann sich in unterschiedlichen sexualisierten Handlungen zeigen, wie die unerwünschte Nähe eines Partners, die Belästigung durch sexuelle Sprüche und Berührungen oder das Darbieten von pornografischen Bildern und Videos. Unter Vergewaltigung wird auch die Nötigung zu sexuellen Handlungen verstanden. Selbst der Versuch fällt unter die sexualisierte Gewalt \parencite{Def_haus_Gewalt_2, Gewaltart, Def_Form_Folge_Gewalt}. Die Zwangsgedanken und das Bedürfnis der Macht sind bei Vergewaltigungen stärker vorhanden, als bei anderen sexuellen Gewalthandlungen. Die ausübende Person ist der Auffassung, dass sie solche Handlungen ausüben muss, damit die Geschlechterhierarchie erhalten bleibt. Sie sind sich demzufolge oftmals ihrer Schuld nicht bewusst \parencite{Def_haus_Gewalt_2}.
+Wie im zuvorigen Absatz bereits dargeboten, können psychische Gewalthandlungen, wie Drohungen oder oportune bloßstellende Kommentare, als Vorbote sexualisierter Gewalt genutzt werden \parencite{Übergang_psy_zu_sex_Gewalt}. Des Öfteren geben die Betroffenen auf sich zu wehren und gehen den Anforderungen und Wünschen des Täters nach. Ein solches Verhalten wird von einigen als möglicher Konsens gedeutet \parencite{Def_haus_Gewalt_2}. Diese Art von Gewalt kann sich in unterschiedlichen sexualisierten Handlungen zeigen, wie die unerwünschte Nähe eines Partners, die Belästigung durch sexuelle Sprüche und Berührungen oder das Darbieten von pornografischen Bildern und Videos. Unter Vergewaltigung wird auch die Nötigung zu sexuellen Handlungen verstanden. Selbst der Versuch fällt unter die sexualisierte Gewalt \parencite{Def_haus_Gewalt_2, Gewaltart, Def_Form_Folge_Gewalt}. Die Zwangsgedanken und das Bedürfnis der Macht sind bei Vergewaltigungen stärker vorhanden, als bei anderen sexuellen Gewalthandlungen. Die ausübende Person ist der Auffassung, dass sie solche Handlungen ausüben muss, damit die Geschlechterhierarchie erhalten bleibt. Sie sind sich demzufolge oftmals ihrer Schuld nicht bewusst \parencite{Def_haus_Gewalt_2}.
 
 % soziale Gewalt
 Die soziale Gewalt wird vom \textcite{Def_Form_Folge_Gewalt} als Bestandteil der psychischen Gewalt angesehen. Auch sie ist körperlich nicht erkennbar. Es erfolgt eine soziale Abkoppelung des Opfers von dessen Umfeld. Der Kontakt zu Freunden oder Familien wird untersagt und auch das Treffen bekannter Personen ist sowohl außerhalb wie auch innerhalb des eigenen Zuhauses untersagt. In manchen Fällen sozialer Gewalt, werden die Telefonate durch den Täter mitgehört. Opfer haben oft nicht die Möglichkeit alleine das Haus zu verlassen. Sie werden von ihrem Partner zur und von der Arbeit gebracht \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Manche Opfer distanzieren sich, aufgrund der psychischen Belastungen, selbst von ihrem sozialen Umfeld. Durch den mangelden sozialen Kontakt ist die Hilfeleistung durch das Umfeld kaum, wenn nicht garnicht möglich \parencite{Def_haus_Gewalt_2}.
 
 % ökonomische Gewalt
-Wie auch die soziale Gewalt, wird die ökonomische Gewalt vom \textcite{Def_Form_Folge_Gewalt} als Unterkategorie der psychischen Gewalt gezählt. Müssen sich die Opfer wiederholt Vorwürfe der fehlerhaften beziehungsweise nicht ausreichenden Fähigkeiten ihren Beruf, den Haushalt oder die Erziehung der eigenen Kinder auszuüben, anhören, erzeugt dies große psychische Belastungen \parencite{Def_haus_Gewalt_2}. Es wird ihnen untersagt einem Beruf nachzugehen, oder sie müssen die Erwerbe an den Partner abgeben, so dass er der einzige ist, der Macht und Kontrolle über die Finanzen hat \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Dadurch sind die Betroffenen finanziel von ihren Partnern abhängig \parencite{physische_Gewalt_wie_aggro}. Damit die Gewalt von der Öffentlichkeit nicht erkennbar ist, werden den Betroffenen teure Geschenke überreicht. Dies stärkt die Unsicherheit und Bedenken den Partner zu verlassen, weil schwere finanzielle Folgen befürchtet werden \parencite{Übergang_psy_zu_sex_Gewalt}.
+Wie auch die soziale Gewalt, wird die ökonomische Gewalt vom \textcite{Def_Form_Folge_Gewalt} als Unterkategorie der psychischen Gewalt gezählt. Müssen sich die Opfer wiederholt Vorwürfe der fehlerhaften beziehungsweise nicht ausreichenden Fähigkeiten ihren Beruf, den Haushalt oder die Erziehung der eigenen Kinder auszuüben anhören, erzeugt dies große psychische Belastungen \parencite{Def_haus_Gewalt_2}. Es wird ihnen untersagt einem Beruf nachzugehen, oder sie müssen die Erwerbe an den Partner abgeben, sodass er der einzige ist, der Macht und Kontrolle über die Finanzen hat \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Dadurch sind die Betroffenen finanziel von ihren Partnern abhängig \parencite{physische_Gewalt_wie_aggro}. Damit die Gewalt von der Öffentlichkeit nicht erkennbar ist, werden den Betroffenen teure Geschenke überreicht. Dies stärkt die Unsicherheit und Bedenken den Partner zu verlassen, weil schwere finanzielle Folgen befürchtet werden \parencite{Übergang_psy_zu_sex_Gewalt}.
 
 %In Anlehung and das \textit{Rad der Gewalt} von \textcite{Rad_der_Gewalt} sind %in Anhang A in Abbildung~\ref{Rad der Gewalt} die fünf Gewaltarten nochmal %zusammenfassend bildlich dargestellt. %how to reference Anhang?
 
 % URSACHE + KREISLAUF DER GEWALT
 \subsubsection{Ursachen und Aufrechterhaltung von Gewalt}     \label{2.1.2.2}
-Wie bei vielen Situationen und Krankheiten, besteht bei der häusliche Gewalt, oder im Rahmen dieser Arbeit die Partnerschaftsgewalt eine Multikausalität. Dies bedeutet, dass nicht ein einziger Faktor als Ursache zu determinieren ist. Es ist vielmehr die Interaktion und Verwobenheit vieler unterschiedlicher Ursachen auf unterschiedlichen Ebenen \parencite{Ursache_hG}. Ein ökologisches Modell versucht anhand von vier Ebenen die Entstehung von Partnerschaftsgewalt zu systematisieren. Die unterschiedlichen Faktoren auf den jeweiligen Ebenen stehen im Zusammenhang miteinander und untereinander und bedingen sich somit gegenseitig. Durch die gemeinsame Interaktion können sie die Auftretenswahrscheinlichkeit von häuslicher Gewalt erhöhen \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}.
+Wie bei vielen Situationen und Krankheiten besteht bei der häusliche Gewalt, und im Rahmen dieser Arbeit enger genommen die Partnerschaftsgewalt, eine Multikausalität. Dies bedeutet, dass nicht ein einziger Faktor als Ursache zu determinieren ist. Es ist vielmehr die Interaktion und Verwobenheit vieler unterschiedlicher Ursachen auf unterschiedlichen Ebenen \parencite{Ursache_hG}. Ein ökologisches Modell versucht anhand von vier Ebenen die Entstehung von Partnerschaftsgewalt zu systematisieren. Die unterschiedlichen Faktoren auf den jeweiligen Ebenen stehen im Zusammenhang miteinander und untereinander und bedingen sich somit gegenseitig. Durch die gemeinsame Interaktion können sie die Auftretenswahrscheinlichkeit von häuslicher Gewalt erhöhen \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}.
 Auf der kleinsten Ebene steht das \textit{Individuum}, dessen Verhalten durch persönliche, biologische und entwicklungsbedingte Faktoren beeinflusst wird. Ausschlaggebend sind hierbei eigene Erfahrungen mit Misshandlungen, sowie exessiver Konsum von Suchtmitteln \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Das Verhalten der Personen ist laut \textcite{Gewaltart} sowie \textcite{Ursache_hG_2} ebenfalls durch psychische Störungen und Störungen der Persönlichkeit geprägt. Aber auch nicht klinische Eigenschaften, wie das Selbstwertgefühl oder die Stressregulationsfähigkeiten, haben einen bedeutsamen Einfluss auf menschliches Verhalten auf der individuellen Ebene \parencite{Ursache_hG}.
 
 Eine Instanz höher, auf der \textit{Beziehungsebene}, beschäftigt sich die Forschung mit der zwischenmenschlichen Interaktion naher Beziehungen. Hierbei wird die Art und Weise betrachtet, wie Partner im Austausch zueinander stehen, wie die Macht zwischen den Partnern verteilt ist und wie sie mit Konflikten unterschiedlichen Ausmaßes innerhalb der Beziehung umgehen \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}.
@@ -51,13 +51,13 @@ Bei wiederholter Durchführung nimmt die zweite Phase an Intensität zu und trit
 
 
 \subsubsection{Folgen von Gewalt}     \label{2.1.2.3}
-Es ist naheligend, dass für den Betroffenen Gewalt jeglicher Art auf unterschiedlichen Ebenen und zu unterschiedlichen Zeiten mit unterschiedlicher Dauer negative Auswirkungen hat. Die unmittelbaren und schnell identifizierbaren Folgen sind meist die physischen, die sich in Form von blauen Flecken, Prellungen, Knochenbrüchen, oder auch Komplikationen während einer Schwangerschaft erkennlich machen \parencite{Def_Form_Folge_Gewalt, Gewaltart}. Aktuell erleidende häusliche Gewalt hat auch einen direkten Einfluss auf das Leistungs- und Konzentrationsvermögen einer Person. Langfristige Folgen, oder welche, die erst zu einem spätereren Zeitpunkt ersichtlich werden, können, in Anlehung an die Schwangerschaftskomplikationen, gynäkologische Folgebeschwerden sein. Häusliche Gewalt kann langfristig auch psychische Krankheiten wie Angststörungen, Posttraumatische Belastungsstörungen, Essstörungen, Depression bis hin zur Suizidalität hervorrufen. \parencite{Def_Form_Folge_Gewalt, Gewaltart}. Mehr als 10\% der von stärkerer häuslicher Gewalt betroffenen Frauen gaben in einer Studie von \textcite{psy_Folgen_hG} an, versucht zu haben, sich das Leben zu nehmen. Selbst wenn es nicht im Tod endet, kämpfen Opfer oft sehr lang mit den Folgen, denn sie können über die Gewalthandlungen hinaus andauern \parencite{Def_haus_Gewalt} und desto gravierender die Misshandlungen waren, desto vermehrter sind auch die Folgen \parencite{Gewaltart}.
+Es ist naheligend, dass für den Betroffenen Gewalt jeglicher Art auf unterschiedlichen Ebenen und zu unterschiedlichen Zeiten mit unterschiedlicher Dauer negative Auswirkungen hat. Die unmittelbaren und schnell identifizierbaren Folgen sind meist die physischen, die sich in Form von blauen Flecken, Prellungen, Knochenbrüchen, oder auch Komplikationen während einer Schwangerschaft erkennlich machen \parencite{Def_Form_Folge_Gewalt, Gewaltart}. Aktuell erleidende häusliche Gewalt hat auch einen direkten Einfluss auf das Leistungs- und Konzentrationsvermögen einer Person. Langfristige Folgen, oder welche, die erst zu einem spätereren Zeitpunkt ersichtlich werden, können, in Anlehung an die Schwangerschaftskomplikationen, gynäkologische Folgebeschwerden sein. Häusliche Gewalt kann langfristig auch psychische Krankheiten wie Angststörungen, Posttraumatische Belastungsstörungen, Essstörungen, Depression bis hin zur Suizidalität hervorrufen. \parencite{Def_Form_Folge_Gewalt, Gewaltart}. Mehr als 10\% der von stärkerer häuslicher Gewalt betroffenen Frauen gaben in einer Studie von \textcite{psy_Folgen_hG} an, versucht zu haben, sich das Leben zu nehmen. Selbst wenn es nicht im Tod endet, kämpfen Opfer oft sehr lang mit den Folgen, denn sie können über die Gewalthandlungen hinaus andauern \parencite{Def_haus_Gewalt} und je gravierender die Misshandlungen waren, desto vermehrter sind auch die Folgen \parencite{Gewaltart}.
 
 %physich:
 Zusätzlich zu den eben geschilderten direkten körperlichen Folgen, können durch ein anhaltendes hohes Stressniveau weitere physische Probleme entstehen, da sich anhaltender Stress negativ auf die Gesundheit auswirkt. Erfolgt keine ärztliche Behandlung auf die gegeben Problematiken, wie beispielsweise Herzkreislaufbeschwerden oder Schmerzsyndrome, können sich diese chronifizieren \parencite{Gewaltart}.
 
 %psychisch:
-Körperliche Folgen haben auf kurzer Sicht eine schmerzhafte und einschränkende Wirkung, dennoch sind vor allem die psychischen Langzeitfolgen gravierender \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Bei einigen betroffenen lässt sich ein gemindertes Selbstwertgefühl festellen, welches dadurch entstanden ist, dass sie Denken durch die erlittenen Gewalt weniger wert zu sein. Sie berichten auch von Symptomen einer Depression oder auch Scham- und Schuldgefühle. Viele greifen zu Alkohol, Medikamenten oder anderen sinnesbeteubenden Substanzen, um ihrer fatalen Lage zu entfliehen. Der Missbrauch der Suchtmittel hat wiederum negative Auswirkungen auf ihr physisches und psychisches Wohlbefinden \parencite{Def_haus_Gewalt_2, Gewaltart}.
+Körperliche Folgen haben auf kurzer Sicht eine schmerzhafte und einschränkende Wirkung, dennoch sind vor allem die psychischen Langzeitfolgen gravierender \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Bei einigen Betroffenen lässt sich ein gemindertes Selbstwertgefühl festellen, welches dadurch entstanden ist, dass sie denken durch die erlittenen Gewalt weniger wert zu sein. Sie berichten auch von Symptomen einer Depression oder auch Scham- und Schuldgefühle. Viele greifen zu Alkohol, Medikamenten oder anderen sinnesbeteubenden Substanzen, um ihrer fatalen Lage zu entfliehen. Der Missbrauch der Suchtmittel hat wiederum negative Auswirkungen auf ihr physisches und psychisches Wohlbefinden \parencite{Def_haus_Gewalt_2, Gewaltart}.
 
 %sozial:
 Wie bereits im Zussammenhang mit der sozialen Gewalt in Kapitel~\ref{2.1.2.1} dargeboten, kommt es in vielen Fällen zu einer sozialen Isolation. Dadurch verlieren Betroffene ihren Kontakt zur Familie und zu Freunden, womit ein potentiel hilfreiches Umfeld entfällt. Es wurde auch bereits erklärt, dass diese Isolation nicht nur durch den Partner erzwungen sein muss. Der Rückzug kann auch durch das Opfer initiiert werden, wenn es sich beispielsweise für die erlebten Misshandlungen schämt und sich dadurch nicht an das bestehende Umfeld wenden möchte. Dies bereitet vielen auch im späteren Leben weitere Probleme, weil es ihnen schwer fällt sich zu öffnen, oder anderen Personen Vertrauen zu schenken. Schafft es eine Person aus einer solchen Beziehung zu fliehen, bedeutet dies eine große Umstrukturierung ihres Lebens und geht oft mit einer umfangreichen Neuorientierung einher. Eine solche Trennung oder Scheidung kann einen Wohnungsumzug und damit einher einen Arbeitsplatzwechsel mit sich bringen. Im Falle einer Familie mit Kind wird die bestehende Familie entzweit \parencite{Gewaltart, Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}.
