--- a/3 Methode/Methoden.tex
+++ b/3 Methode/Methoden.tex
@@ -1,5 +1,5 @@
 \chapter{Methoden}   \label{ch_3}
-In diesem Kapitel wird die empirische Bearbeitung der Hypothesen dargestellt. Zunächst wird die erhobene Stichprobe beschrieben, gefolgt von der Erläuterung der Erhebungsmethode, Stichprobenauswahl und das Erhebungsdesign. Darauf folgend wird auf die Operationalisierung der Konstrukte eingegangen. In folgendem Zuge wird die Untersuchungsdurchführung konkretisiert und abschließend wird auf die Auswertungsmethode eingegangen.
+In diesem Kapitel wird die empirische Bearbeitung der Hypothesen dargestellt. Zunächst wird die erhobene Stichprobe beschrieben, gefolgt von der Erläuterung der Erhebungsmethode, Stichprobenauswahl und dem Erhebungsdesign. Darauf folgend wird auf die Operationalisierung der Konstrukte eingegangen. In folgendem Zuge wird die Untersuchungsdurchführung konkretisiert und abschließend wird auf die Auswertungsmethode eingegangen.
 
 \section{Stichprobenbeschreibung} \label{sec_3.1}
 Von den 578 Probanden, die den Onlinebefragung ausgefüllt hatten, mussten 145 entfernt werden, da sie den Fragebogen nicht vollständig beantwortet hatten. Aufgrund ungültiger Werte und beleidigender Kommentare musste eine weitere Person entfernt werden. Somit nahmen am Onlinefragbogen eine Stichprobe von $N~=~432$ Probanden teil. \input{3 Methode/Histogramm Altersverteilung.tex}
@@ -12,7 +12,7 @@ Die vorliegende Studie ist Teil eines größeren Forschungsprojektes, das weiter
 
 Vorraussetzung für die Teilhabe an der Umfrage waren ein internetfähiges Endgerät, die Erreichte Volljährigkeit und eine ausreichende Beherrschung der deutschen Sprache. 
 
-Für die Datengeneration wurde ein Onlinefragbogen (siehe \hyperref[Fragebogen]{Anhang E}) erstellt, da dadurch eine weitreichendere und ökonomischere Erhebung gewährleistet werden konnte. Auf diese weise konnnten der Interview- und der Versuchsleitereffekt vermieden werden. Der Zugangslink wurde primär über die sozialen Netzwerke der Projektleiterinnen verschickt der sich nach dem Primzip des Schneeballeffekts verbreitete. Es handelt sich dabei um ein randomisiertes teilexperimentelles Verfahren mit einer anfallenden Stichprobe. Das Verfahren ist teilexperimentel, da die Variablen in den Fallvignetten manipuliert wurden, die Variablen der standatisierten Fragebögen jedoch nicht.
+Für die Datengeneration wurde ein Onlinefragbogen (siehe \hyperref[Fragebogen]{Anhang F}) erstellt, da dadurch eine weitreichendere und ökonomischere Erhebung gewährleistet werden konnte. Auf diese Weise konnnten der Interview- und der Versuchsleitereffekt vermieden werden. Der Zugangslink wurde primär über die sozialen Netzwerke der Projektleiterinnen verschickt der sich nach dem Primzip des Schneeballeffekts verbreitete. Es handelt sich dabei um ein randomisiertes teilexperimentelles Verfahren mit einer anfallenden Stichprobe. Das Verfahren ist teilexperimentel, da die Variablen in den Fallvignetten manipuliert wurden, die Variablen der standatisierten Fragebögen jedoch nicht.
 
 Bezüglich der Erhebungsmethode und -Design handelt es sich bei dieser Arbeit um eine quantitative Querschnittstudie, auf der Basis eines einzigen Messzeitpunktes.
 
@@ -20,7 +20,7 @@ Für die Ergebng der Daten wurde neben den Vignetten eine deutsche Übersetzung 
 
 
 \section{Operationalisierung der Konstrukte}    \label{sec_3.3}
-Damit die Teilnehmer unvoreingenommen die, der Wahrheit ähnelten, fiktiven Fallvignetten bewerten konnten, begann der Fragebogen mit zwei zufällig zugeodneten Vignetten, die psychische oder sexualisierte Gewalt behandelten. Darauf folgte die deutsche Version der Skala zur Erfassung der Akzeptanz von Gewaltmythen. Im Anschluss befand sich eine umfangreiche Testbatterie mit vier Skalen um physische wie verbale Aggression, den Ärger und das Misstrauen zu messen. Abschließend wurden die soziodemografischen Daten wie Alter, Geschlecht, kultureller Hintergrund, Bildungsstand, berufliche Situation und das Einkommen erfragt.
+Damit die Teilnehmer unvoreingenommen die, der Wahrheit ähnelten, fiktiven Fallvignetten bewerten konnten, begann der Fragebogen mit zwei zufällig zugeodneten Vignetten, die psychische oder sexualisierte Gewalt behandelten. Darauf folgte die deutsche Version der Skala zur Erfassung der Akzeptanz von Gewaltmythen \parencite{Peters2003}. Im Anschluss befand sich eine umfangreiche Testbatterie mit vier Skalen um physische wie verbale Aggression, den Ärger und das Misstrauen zu messen \parencite{Aggressionsfragebogen}. Abschließend wurden die soziodemografischen Daten wie Alter, Geschlecht, kultureller Hintergrund, Bildungsstand, berufliche Situation und das Einkommen erfragt.
 
 Mithilfe der Fallvignetten zur häuslichen Gewalt wurde die Verantwortungszuschreibung erhoben. Insgesamt wurden 16 unterschiedliche Vignetten generiert, um vier verschiedene Variablen messen zu können. Bei diesen Variablen handelte es sich umd die Gewaltart (psychisch oder sexualisiert), das Geschlecht (männlich oder weiblich), den sozioökonomischen Status (hoch oder niedrig) und um den kulturellen Hintergrund (deutsch oder arabisch). Über einen Schiberegler konnten die Probanden die relative Verantwortung von Opfer und Täter bewerten. Die Codierung verlief vom kleinstmöglichen Punktewert auf der linken Seit bis zum größtmöglichen Punktewert auf der rechten Seite (Codierung 1-101). Jeder Proband bekam sowohl eine Vignetter sexualisierter Gewalt wir einer psychischer. Die Ausprägungen der anderen drei Variablen wurden randomisiert zugeteilt.
 Ein Beispiel für eine psychische Gewaltvignette mit arabischem Hintergrund, einem weiblichen Opfer und einem niedrigeren sozioökonomischen Status des Opfers sah wie folgt aus: \textit{Mustafa arbeitet als Arzt im öffentlichen Krankenhaus. Seine Frau Fatima darf ihm zuhause nicht widersprechen. Sogar in der Öffentlichkeit verbietet Mustafa ihr häufig den Mund. Dadurch sinkt das Selbstwertgefühl von Fatima so weit, dass sie viel im Bett liegt und kaum noch Freude an Freizeitaktivitäten und ihrem 450$-$Ehro$-$Job als Kassiererin hat.} 
@@ -39,7 +39,7 @@ Die Reliabilität ist aufgrund des standatisierten Fragebogens gegeben. Es kann 
 Über den Zeitraum vom 04.06.2022 bis 27.06.2022 erstreckte sich die Datenerhebung. Der über SoSci-Survey erstellte Fragebogen wurde primär über den Messenger-Dienst WhatsApp, aber auch über Instagram, Facebook, Signal, Telegram und das Alumniportal Deutschland verbreitet, mit der Bitte der Verbreitung, um eine möglichst große Stichprobe zu erreichen. Die Mindeststichprobengröße von 395 wurde mithilfe des kostenlosen Tools G*Power ermittelt. %G*Power (https://bjoernwalther.com/eine-kurze-einfuehrung-in-gpower/)
 
 
-Im Einführungstext, zu Beginn der Befragung, wurden Auskünfte über die 15 minütige Bearbeitungszeit, wie auch die garantierte Anonymität der Probanden aufgeklärt. In der Werbung und im Einführungstext wurden Begriffe häusliche Gealt, Gewaltmythen und Gewalt bewust vermieden, um eine Beeinflussung auf die Anstehende Verantwortungszuschreibung zu vermeiden. Die Teilnehmer wurden zudem darauf hingewiesen, dass die Teilnahme der Befragung freiwillige ist. Bevor auf die nächste Seite weitergeklickt werden konnte, wurde mithilfe einer zu beantworteten Frage sichergestellt, dass die Person den Einleitungstext verstanden hat und mit der Befragung einverstanden ist. Auf der anschließenden Seite folgte die Aufgabenerklärung für die Fallvignetten, wie eine kleine Aufklärung diesbezüglich. Jeweils nach jeder dargebotener Vignette folgten vier Fragen, zur überprüfung der Manipulation. Durch die nachfolgende Frage wurde das Erkennen der Gewaltart überprüft: \textit{Ging es um sexualisierte Gewalt?}. Die anschließende Frage überprüfte das Geschlecht des Opfers: \textit{Was das Opfer eine Frau?}. Anschließend folgte die Nachfrage nach dem sozioökonomischen Status: \textit{War die finanzielle Situation des Opfers schlechter als die finanzielle Situation des Täters?}. Zum Schluss wurde die vierte und letzte Variable, der kultuerlle Hintergrund, überprüft: \textit{Hatten die Personen deutsche Namen?}. Anschließend folgten die deutsche Übersetzung des DVMAS und der Deutsche Aggressionsfragebogen. Zum Schluss wurden die Probanden gebeten einige kurze Angaben zu ihrer Person zu geben, woraufhin eine letzte Nachfrage der gewissenhaften Durchführung folgte. Die Probanden konnten noch eine freiwillige Vermutung der zu untersuchten Themen in ein Feld eintragen. Dies bietete eine weitere Möglichkeit zu überprüfen, ob die Teilnehmer aufmerksam den Fragebogen bearbeitet hatten. Damit endete der für die Forschenden wichtige Teil der Befragung. Auf einer daran anschließenden Seite wurden Informationen und Kontaktdaten für Betroffene von häuslicher Gewalt gewährleistet. 
+Im Einführungstext, zu Beginn der Befragung, wurden Auskünfte über die 15 minütige Bearbeitungszeit, wie auch die garantierte Anonymität der Probanden aufgeklärt. In der Werbung und im Einführungstext wurden Begriffe häusliche Gealt, Gewaltmythen und Gewalt bewust vermieden, um eine Beeinflussung auf die Anstehende Verantwortungszuschreibung zu vermeiden. Die Teilnehmer wurden zudem darauf hingewiesen, dass die Teilnahme der Befragung freiwillige ist. Bevor auf die nächste Seite weitergeklickt werden konnte, wurde mithilfe einer zu beantworteten Frage sichergestellt, dass die Person den Einleitungstext verstanden hat und mit der Befragung einverstanden ist. Auf der anschließenden Seite folgte die Aufgabenerklärung für die Fallvignetten, wie eine kleine Aufklärung diesbezüglich. Nach jeder dargebotener Vignette folgten vier Fragen, zur überprüfung der Manipulation. Durch die nachfolgende Frage wurde das Erkennen der Gewaltart überprüft: \textit{Ging es um sexualisierte Gewalt?}. Die anschließende Frage überprüfte das Geschlecht des Opfers: \textit{Was das Opfer eine Frau?}. Anschließend folgte die Nachfrage nach dem sozioökonomischen Status: \textit{War die finanzielle Situation des Opfers schlechter als die finanzielle Situation des Täters?}. Zum Schluss wurde die vierte und letzte Variable, der kultuerlle Hintergrund, überprüft: \textit{Hatten die Personen deutsche Namen?}. Anschließend folgten die deutsche Übersetzung des DVMAS und der Deutsche Aggressionsfragebogen. Zum Schluss wurden die Probanden gebeten einige kurze Angaben zu ihrer Person zu geben, woraufhin eine letzte Nachfrage der gewissenhaften Durchführung folgte. Die Probanden konnten noch eine freiwillige Vermutung der zu untersuchten Themen in ein Feld eintragen. Dies bietete eine weitere Möglichkeit zu überprüfen, ob die Teilnehmer aufmerksam den Fragebogen bearbeitet hatten. Damit endete der für die Forschenden wichtige Teil der Befragung. Auf einer daran anschließenden Seite wurden Informationen und Kontaktdaten für Betroffene von häuslicher Gewalt gewährleistet. 
 
 Mit Abschließen der befragung wurden die Probanden, die über das SONA-System kamen wieder dorthin zurückgeführt und ihnen wurden 0.25 Versuchspersonenstunden angerechnet.
 
@@ -59,4 +59,4 @@ Die erste Hypothese (H1) wurde mit der Spearman$-$Rang$-$Korrelation berechnet. 
 
 Für die zweite Hypothese (H2) wurde eine Pearson$-$Produkt$-$Moment$-$Korrelationen gerechnet. Die Korrelationsrechnung der H2 diente der Überprüfung der angenommenen positiven Korrelation des metrischen Aggressionsscores mit der metrischen Akzeptanz von Gewaltmythen. Voraussetzungen für eine Pearson$-$Produkt$-$Moment$-$Korrelation sind die Intervallskalierung oder Dichotomie beider Variablen, eine bestehende Linearität, die Abwesenheit von Ausreißern, sowie die Endlichkeit der Varianz beziehungsweise. Kovarianz.
 
-Bei der dritten Hypothese (H3) handelte es sich um eine Moderationsanalyse, die mithilfe des Plug-in PROCESS berechnet wurde. Untersucht wurde bei dieser Hypothese ob das Geschlecht den Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression moderiert. Die allgemeinen Vorraussetzung für diesen Test sind die Linearität und der Stichprobenumfang. Des Weiteren gibt es spezifische Voraussetzungen. Eine gegebene Homoskedastizität, Normalverteilung des Fehlers, keine Autokorrelation und keine Multikolinearität müssen gegeben sein.
+Bei der dritten Hypothese (H3) handelte es sich um eine Moderationsanalyse, die mithilfe des Plug-in PROCESS berechnet wurde. Untersucht wurde bei dieser Hypothese, ob das Geschlecht den Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression moderiert. Die allgemeinen Vorraussetzung für diesen Test sind die Linearität und der Stichprobenumfang. Des Weiteren gibt es spezifische Voraussetzungen. Eine gegebene Homoskedastizität, Normalverteilung des Fehlers, keine Autokorrelation und keine Multikolinearität müssen gegeben sein.
