--- a/4 Ergebnisse/Ergebnisse.tex
+++ b/4 Ergebnisse/Ergebnisse.tex
@@ -36,7 +36,7 @@ Die in Tabelle~\ref{H2_Pearson} ersichtliche Pearson$-$Produkt$-$Moment$-$Korrel
 
 
 \subsection{Hypothese 3}    \label{subsec_4.2.3}
-Um die vermutete Moderation des biologischen Geschelchts auf den Zusammenhang zwischen Aggressio und dem DVMAS zu testen, wurde eine Moderationsanalyse durchgeführt. Die Variablen weisen eine lineare Beziehung und eine Unabhängigkeit, durch die nicht verbundene Erhebung der einzelnen Variablen, auf. Durch die mit $N_{neu}$~=~864 großen Stichprobe, kann von einer Normalverteilung der Residuen ausgegangen werden. Die Überprüfung der Homoskedastizität mithilfe des White$-$Tests ergab eine signifikantes Ergebnis ($p$~=~.03). Somit liegt eine Heteroskedastizität vor. 
+Um die vermutete Moderation des biologischen Geschelchts auf den Zusammenhang zwischen Aggressio und dem DVMAS zu testen, wurde eine Moderationsanalyse durchgeführt. Die Variablen weisen eine lineare Beziehung (siehe \hyperref[Linearitat_sex_DVMAS]{Anhang D}) und eine Unabhängigkeit, durch die nicht verbundene Erhebung der einzelnen Variablen, auf. Durch die mit $N_{neu}$~=~864 großen Stichprobe, kann von einer Normalverteilung der Residuen ausgegangen werden. Die Überprüfung der Homoskedastizität mithilfe des White$-$Tests ergab eine signifikantes Ergebnis ($p$~=~.03). Somit liegt eine Heteroskedastizität vor. 
 
 \input{4 Ergebnisse/Tabelle Moderation.tex}
 Das Gesamtmodell war, wie in Tabelle~\ref{Moderationsanalyse} demonstriert, mit einer Varianzaufklärung von 16.34\% signifikant ($F$(3, 856)~=~50.30, $p<$ .001). Die Moderationsanalyse konnte jedoch keinen signifikanten Moderationseffekt finden, $\Delta R^{2}$~=~0.12\%, F(1, 860)~=~1.12, $p$~=~.290, 95\% CI[-0.39, 0.12]. Dennoch klärt das Modell 16.34\% der Varianz des deutschen DVMAS auf.
@@ -79,7 +79,7 @@ Zusätzlich zu den untersuchten Hypothesen wurden noch weitere explorative Unter
 
 
 \subsection{Korrelation Aggresion-Subskalen mit DVMAS und Victim Blaming}  \label{subsec_4.4.1}
-Für die Korrelation zwischen den vier Aggression-Subskalen physische und verbale Aggression, Ärger und Misstrauen und der Akzeptanz von Gewaltmythen, wie der Verantwortungszuschreibung auf das Opfer wurde eine Spearman$-$Rang$-$Korrelation berechnet. Trotz der metrischen Skaleniveaus aller Variablen und die Erfüllung weiterer Voraussetzungen für eine Pearson$-$Produkt$-$Moment$-$Korrelation, musste aufgrund der Ausreißer der Subskala physische Aggression (siehe \hyperref[Boxplot_phAggro]{Anhang D}), die Spearman$-$Korrelation herangezogen werden.
+Für die Korrelation zwischen den vier Aggression-Subskalen physische und verbale Aggression, Ärger und Misstrauen und der Akzeptanz von Gewaltmythen, wie der Verantwortungszuschreibung auf das Opfer wurde eine Spearman$-$Rang$-$Korrelation berechnet. Trotz der metrischen Skaleniveaus aller Variablen und die Erfüllung weiterer Voraussetzungen für eine Pearson$-$Produkt$-$Moment$-$Korrelation, musste aufgrund der Ausreißer der Subskala physische Aggression (siehe \hyperref[Boxplot_phAggro]{Anhang E}), die Spearman$-$Korrelation herangezogen werden.
 
 An den mit zwei Sternchen vermerkten $r-$Werten, in Tabelle~\ref{lala}, ist erkennbar, dass alle Subskalen unter sich signifikant sind und, dass sie jeweils mit dem DVMAS positiv korrelieren. Bei der Verantwortungszuschreibung auf das Opfer war ausschließlich die Korrelation mit physischer Aggression signifikatn.
 \input{4 Ergebnisse/Tabelle Explorativ AggroSub.tex}
