--- a/Anhang.tex
+++ b/Anhang.tex
@@ -50,8 +50,24 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-    \chapter*{Anhang D}            \label{Boxplot_phAggro}
+    \chapter*{Anhang D}            \label{Linearitat_sex_DVMAS}
     \addcontentsline{toc}{chapter}{D}
+    \noindent \textit{Linearer Zusammenhang der Variablen Aggression, Gewaltmythenakzeptanz und Geschlecht}
+
+    \begin{figure}[htb!]
+        \centering
+            \includegraphics[width=\textwidth]{Linearität H3.jpg}
+            %\caption[Linearer Zusammenhang des Deutschen Aggressionsfragebogens und des DVMAS]{Linearer Zusammenhang des Deutschen Aggressionsfragebogens und des DVMAS}
+
+    \end{figure}
+    
+    
+    %Boxplot Aggression$-$Subskala physische Aggression
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+    \chapter*{Anhang E}            \label{Boxplot_phAggro}
+    \addcontentsline{toc}{chapter}{E}
     \noindent \textit{Boxplot zur Erfassung der Ausreißer der Aggression$-$Subskala physische Aggression}
 
     \begin{figure}[htb!]
@@ -67,106 +83,106 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
     % Online$-$Fragebogen
-    \chapter*{Anhang E}  \label{Fragebogen}
-    \addcontentsline{toc}{chapter}{E}
+    \chapter*{Anhang F}  \label{Fragebogen}
+    \addcontentsline{toc}{chapter}{F}
     \noindent \textit{Bildaufnahmen des Online$-$Fragbogens}
 
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 1.png}
+            \includegraphics[width=\textwidth, frame]{Seite 1.png}
             \caption[]{Seite 1 des Online$-$Fragebogens}
     \end{figure}
 
     \newpage
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 2.png}
+            \includegraphics[width=\textwidth, frame]{Seite 2.png}
             \caption[]{Seite 2 des Online$-$Fragebogens}
     \end{figure}
 
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 3.png}
+            \includegraphics[width=\textwidth, frame]{Seite 3.png}
             \caption[]{Seite 3 des Online$-$Fragebogens}
     \end{figure}
     
     \newpage
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 4.png}
+            \includegraphics[width=\textwidth, frame]{Seite 4.png}
             \caption[]{Seite 4 des Online$-$Fragebogens}
     \end{figure}
     
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 4 mit Infobox.png}
+            \includegraphics[width=\textwidth, frame]{Seite 4 mit Infobox.png}
             \caption[]{Seite 4 des Online$-$Fragebogens mit Infobox}
     \end{figure}
     
     \newpage
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 5.png}
+            \includegraphics[width=\textwidth, frame]{Seite 5.png}
             \caption[]{Seite 5 des Online$-$Fragebogens}
     \end{figure}
     
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 6.png}
+            \includegraphics[width=\textwidth, frame]{Seite 6.png}
             \caption[]{Seite 6 des Online$-$Fragebogens}
     \end{figure}
     
     \newpage
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 7.png}
+            \includegraphics[width=\textwidth, frame]{Seite 7.png}
             \caption[]{Seite 7 des Online$-$Fragebogens (deutsche Übersetzung des englischen DVMAS nach \textcite{Peters2003})}
     \end{figure}
     
     \newpage
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 8_1.png}
-            \caption[]{Erste Hälfte von Seite 8 des Online$-$Fragebogens des Deutschen Aggressionsfragebogens \parencite{Aggressionsfragebogen}}
+            \includegraphics[width=\textwidth, frame]{Seite 8_1.png}
+            \caption[]{Erste Hälfte von Seite 8 des Online$-$Fragebogens (Deutscher Aggressionsfragebogen \parencite{Aggressionsfragebogen})}
     \end{figure}
     
     \newpage
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 8_2.png}
+            \includegraphics[width=\textwidth, frame]{Seite 8_2.png}
             \caption[]{Zweite Hälfte von Seite 8 des Online$-$Fragebogens des Deutschen Aggressionsfragebogens \parencite{Aggressionsfragebogen}}
     \end{figure}
     
     \newpage
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 9_1.png}
+            \includegraphics[width=\textwidth, frame]{Seite 9_1.png}
             \caption[]{Erste Hälfte von Seite 9 des Online$-$Fragebogens}
     \end{figure}
     
     \newpage
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 9_2.png}
+            \includegraphics[width=\textwidth, frame]{Seite 9_2.png}
             \caption[]{Zweite Hälfte von Seite 9 des Online$-$Fragebogens}
     \end{figure}
     
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 10.png}
+            \includegraphics[width=\textwidth, frame]{Seite 10.png}
             \caption[]{Seite 10 des Online$-$Fragebogens}
     \end{figure}
     
     \newpage
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 11.png}
+            \includegraphics[width=\textwidth,frame]{Seite 11.png}
             \caption[]{Seite 11 des Online$-$Fragebogens}
     \end{figure}
     
     \begin{figure}[htb!]
         \centering
-            \includegraphics[width=\textwidth]{Seite 12.png}
+            \includegraphics[width=\textwidth, frame]{Seite 12.png}
             \caption[]{Seite 12 des Online$-$Fragebogens}
     \end{figure}
 
