--- a/SRH_Vorlage.tex
+++ b/SRH_Vorlage.tex
@@ -32,7 +32,7 @@
 % Abbildungen setzen zu können -> needed for notes
 \usepackage{booktabs}
 \usepackage{multirow}
-\usepackage{adjustbox}
+\usepackage[export]{adjustbox}
 \usepackage{tabu}
 \usepackage{longtable}
 \usepackage{tabularx}
