--- a/1 Einleitung.tex
+++ b/1 Einleitung.tex
@@ -6,36 +6,16 @@ Prof. Dr. Friedrich Hacker sagte \enquote{Jede Aggression sucht sich zu rechtfer
 %entwickelt sich dann in langanhaltende häusliche Gewalt. 
 
 % häusliche Gewalt
-Im Falle von häuslicher Gewalt tut dies der Partner, der man am meisten vertraut und 
-bei der man nie damit gerechnet hätte, dass sie es einem gegenüber zeigt. In so einem 
-Fall weiß die betroffene Person oftmals nicht, wie sie dieser Situation entkommen kann. 
-Das Zuhause sollte für alle ein sich Ort sein, an dem sie sich entspannen können. 
-Dennoch gibt es viele Fälle wo dies nicht der Fall ist. Im Jahr 2020 gab es 148.031 
-gemeldete Fälle von häuslicher Gewalt \parencite{häusliche_Gewalt}. 
-Die Dunkelziffer ist weit höher, da viele Betroffene keine Anzeige erstatten. Bei Männern
-ist ein solches Verhalten möglicherweise schambehaftet.
+Im Falle von häuslicher Gewalt tut dies der Partner, dem man am meisten vertraut und bei dem man nie damit gerechnet hätte, dass er es einem gegenüber zeigt. In so einem Fall weiß die betroffene Person oftmals nicht, wie sie dieser Situation entkommen kann. Das Zuhause sollte für alle ein sicherer Ort sein, an dem man sich entspannen kann. Dennoch gibt es viele Fälle, in denen dies nicht der Fall ist. Im Jahr 2020 gab es 148.031 gemeldete Fälle von häuslicher Gewalt \parencite{häusliche_Gewalt}. Die Dunkelziffer ist weit höher, da viele Betroffene keine Anzeige erstatten. Bei Männern ist ein solches Verhalten möglicherweise schambehaftet.
 
 % Victim Blaming
-Wie Hacker \parencite{Friedrich_Hacker} 
-in seinem Zitat beschrieben hat, sucht der Aggressor sich zu rechtfertigen, er fällt
-dem \textit{Victim Blaming} zum Opfer. Das bedeutet, dass eine Person die Verantwortung
-dem Geschädigten zuschreibt. 
+Wie Hacker \parencite{Friedrich_Hacker} in seinem Zitat beschrieben hat, sucht der Aggressor sich zu rechtfertigen, er fällt dem \textit{Victim Blaming} zum Opfer. Das bedeutet, dass eine Person die Verantwortung dem Geschädigten zuschreibt. 
 
 % Gewaltmythen
-Victim Blaming ist ein großer Aspekt von Gewaltmythen. Trotz jahrelanger Forschung in 
-diesem Gebiet, sind diese Mythen heutzutage noch weit verbreitet. 
-Sie beruhen auf falschen Annahmen der Verantwortung und deutet eine gewisse Einflussnahme 
-des Opfers an.
+Victim Blaming ist ein großer Aspekt von Gewaltmythen. Trotz jahrelanger Forschung in diesem Gebiet, sind diese Mythen heutzutage noch weit verbreitet. 
+Sie beruhen auf falschen Annahmen der Verantwortung und deutet eine gewisse Einflussnahme des Opfers an.
 
-Diese Studie untersucht die Aggressivität des Beobachters von häuslicher Gewalt und 
-dessen Akzeptanz von Gewaltmythen. Zu Beginn werden die einzelnen Konstrukte häusliche 
-Gewalt, Gewaltmythen und Aggressivität erleutert und der theoretische Hintergrund, so wie 
-die daraus abgeleiteten Hypothesen widergespiegelt. In den darauffolgenden Kapiteln wird 
-auf die Methoden der Studiendurchführung, wie auch auf die Ergebnisse eingegangen. In der 
-abschließenden Diskussion erfolgt eine umfassende Bewertung der Ergebnisse sowie ein 
-Ausblick auf den weiteren Forschungsbedarf in diesen Themengebieten.
+Diese Studie untersucht die Aggressivität des Beobachters von häuslicher Gewalt und dessen Akzeptanz von Gewaltmythen. Zu Beginn werden die einzelnen Konstrukte häusliche Gewalt, Gewaltmythen und Aggressivität erleutert und der theoretische Hintergrund, so wie die daraus abgeleiteten Hypothesen widergespiegelt. In den darauffolgenden Kapiteln wird auf die Methoden der Studiendurchführung, wie auch auf die Ergebnisse eingegangen. In der 
+abschließenden Diskussion erfolgt eine umfassende Bewertung der Ergebnisse sowie ein Ausblick auf den weiteren Forschungsbedarf in diesen Themengebieten.
 
-Aus Gründen der besseren Lesbarkeit wird in der nachfolgenden Arbeit die Sprachform des
-generischen Maskulinums verwendet. An dieser Stelle wird darauf hingewiesen, dass die 
-ausschließliche Verwendung der männlichen Form geschlechtsunabhängig verstanden werden 
-soll.
+Aus Gründen der besseren Lesbarkeit wird in der nachfolgenden Arbeit die Sprachform des generischen Maskulinums verwendet. An dieser Stelle wird darauf hingewiesen, dass die ausschließliche Verwendung der männlichen Form geschlechtsunabhängig verstanden werden soll.
